--- a/packages/frontend/src/index.css
+++ b/packages/frontend/src/index.css
@@ -1,70 +1,63 @@
-:root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  line-height: 24px;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
+@import './keyframes.css';
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 body {
-  margin: 0;
-  display: flex;
+  @apply text-primary;
+  font-family: 'Nunito', sans-serif;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+button:disabled {
+  cursor: not-allowed;
+}
+
+.index-sidebar-width {
+  max-width: min(250px, 25%);
+  min-width: 150px;
+}
+
+.index-sidebar-height {
+  min-height: calc(100vh - 2.5rem - 1rem);
+}
+
+.index-spinner {
+  display: block;
+  position: relative;
+  display: grid;
+  padding: 1vmin;
   place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+.index-spinner::before,
+.index-spinner::after {
+  content: '';
+  box-sizing: border-box;
+  position: absolute;
+  width: 1vmin;
+  height: 1vmin;
+  background-color: white;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+.index-spinner::before {
+  top: calc(50% - 1vmin);
+  left: calc(50% - 1vmin);
+  animation: kf-spinner-2 2.4s cubic-bezier(0, 0, 0.24, 1.21) infinite;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.index-spinner::after {
+  top: 50%;
+  left: 50%;
+  animation: kf-spinner-1 2.4s cubic-bezier(0, 0, 0.24, 1.21) infinite;
+}
+
+.index-hide-animation {
+  animation: kf-fade-out 0.3s ease-in-out forwards;
+}
+
+.index-show-animation {
+  animation: kf-fade-in 0.3s ease-in-out forwards;
 }
